# mutsumi

./: .gitignore  Cargo.toml  README.md  blp-resources.in  build.rs
example/: danmakw.rs  gst.rs  mpv.rs  player.rs
mutsumi-live/: Cargo.toml  build.rs
mutsumi-live/resources/: resources.gresource.xml
mutsumi-live/resources/ui/: playlist.ui  source_row.ui  window.ui
mutsumi-live/src/: lib.rs  main.rs
mutsumi-live/src/danmaku/: douyu.rs  mod.rs
mutsumi-live/src/playlist/: mod.rs  playlist.blp  source_row.blp  source_row.rs
mutsumi-live/src/status/: mod.rs
mutsumi-live/src/window/: mod.rs  window.blp
mutsumi-player/: Cargo.toml
mutsumi-utils/: Cargo.toml  README.md
mutsumi-utils/src/: lib.rs  tokio.rs  ui.rs
resources/: resources.gresource.xml
resources/ui/: control_sidebar.ui  menu.ui  menu_actions.ui  mpv_control_sidebar.ui  player.ui  shortcuts.ui  volume_bar.ui
src/: lib.rs  macros.rs  player.blp
src/control/: format.rs  mod.rs  toast.rs
src/control/menu/: menu.blp  menu.rs  menu_actions.blp  mod.rs
src/control/player/: mod.rs  player.blp  shortcuts.blp
src/control/scale/: mod.rs
src/control/sidebar/: control_sidebar.blp  mod.rs
src/control/sidebar/mpv/: mod.rs
src/control/volume_bar/: mod.rs  volume_bar.blp
src/danmakw/: alloc.rs  pool.rs
src/video/: backend.rs  conf.rs  error.rs  mod.rs  play.rs  player.rs
src/video/gst/: contexted.rs  mod.rs  video.rs
src/video/mpv/: actor.rs  area.rs  contexted.rs  mod.rs  paintable.rs  proxy.rs
subprojects/: blueprint-compiler.wrap
