[package]
name = "mutsumi-live"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.11", package = "gtk4", features = ["v4_22"] }
adw = { version = "0.9", package = "libadwaita", features = ["v1_9"] }
tracing-subscriber = "0.3"
tracing = "0.1.44"
mutsumi = { path = "../" }
actix-bililive = "0.1.0-beta.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"

[build-dependencies]
glib-build-tools = "0.22"
