[package]
name = "mutsumi-live"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.11", package = "gtk4", features = ["v4_22"] }
adw = { version = "0.9", package = "libadwaita", features = ["v1_9"] }
tracing-subscriber = "0.3"
tracing = "0.1.44"
mutsumi = { path = "../" }
bililive = "0.2.0-beta.5"
flume = "0.12"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
tokio = { version = "1.52", features = ["macros"] }
reqwest = { version = "0.11", default-features = false, features = ["native-tls", "json"] }
async-tungstenite = { version = "0.17", features = ["tokio-native-tls"] }
flate2 = "1"
md5 = "0.8.0"
brotli = "8.0.4"

[build-dependencies]
glib-build-tools = "0.22"
